--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
     <h1>Whack a Mole</h1>
     <h2 id="score">0</h2>
+    <button id="inst">Show Instructions</button>
+    <p class="instructions" id="gameInstructions" style="display:none;">Click "Start Game" to begin. Click on the Monty Moles to whack them and score points. Avoid clicking on the Piranha Plants. You have 30 seconds to score as much as you can.</p> 
     <button id="startgame">Start Game</button>
     <button id="newgame">New Game</button>
     <button id="pausegame">Pause Game</button>
+    
     <div id="board"></div>
 </body>
 </html>
